# glimprint

./: .env  .env.example  .gitignore  README.md  analyze_data.py  check_title.py  dump_one_content.py  glimprint_home.html  inspect_markers.py  pyproject.toml  refine_seminars.py  requirements.txt  scrape_members.py  scrape_news.py  scrape_workshops.py  scrape_youtube.py  sir_model_orig.html  vercel.json  verify_members.py  verify_refinement.py  verify_templates.py
app/: auth.py  database.py  mailing.py  main.py  routes.py
app/content/: members.json  models.json  seminars.json
app/content/news/: welcome.md
app/static/css/: extra_styles.css  styles.css
app/templates/: base.html  contact.html  generic.html  history.html  home.html  member_detail.html  member_form.html  members.html  membership.html  news.html  news_detail.html  news_form.html  news_list.html  publication_form.html  publications.html  resources.html  seminar_detail.html  seminar_form.html  seminars.html  sir_model.html  submit_news.html  submit_success.html  workshop_detail.html  workshop_form.html  workshops.html
app/templates/admin/: approvals.html  contacts.html  (+5 more)
docs/: MIGRATION_GUIDE.md
old/: debug_seminars_render.py  debug_shihao.py  inspect_news.py  main.py  migrate_models.py  migrate_publications.py  migrate_to_sqlite.py  refine_workshops.py  runnable_model.html  scrape_seminars.py  test_date_extraction.py  test_extraction.py  update_schema.py  verify_date.py  verify_db.py  verify_workshops.py
scripts/: create_admin.py  migrate_to_turso.py  update_schema.py
static/js/: app.js
(+10 files in other folders)
