[project]
name = "glimprint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "markdown>=3.10.1",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
    "pytz>=2024.1",
    "libsql>=0.1.11",
    "python-multipart>=0.0.22",
    "python-dotenv>=1.2.1",
    "email-validator>=2.3.0",
    "itsdangerous>=2.2.0",
    "bcrypt>=5.0.0",
]
